Fix for z-index on large play button

--- a/src/less/plyr.less
+++ b/src/less/plyr.less
@@ -371,6 +371,7 @@
 .plyr__play-large {
     display: none;
     position: absolute;
+    z-index: 1;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
